--- a/GDI-GameEngine/GDI-GameEngine.vcxproj.filters
+++ b/GDI-GameEngine/GDI-GameEngine.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="EllipseShape.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="CircleShape.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -60,6 +63,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="EllipseShape.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="CircleShape.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
