--- a/GDI-Wrapper/GDI-Wrapper.vcxproj.filters
+++ b/GDI-Wrapper/GDI-Wrapper.vcxproj.filters
@@ -39,31 +39,31 @@
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Link.hpp">
-      <Filter>Link Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Include\Export\Export.hpp">
-      <Filter>Export</Filter>
-    </ClInclude>
-    <ClInclude Include="Include\Graphics\Shapes\CircleShape.hpp">
+    <ClInclude Include="..\include\Graphics\Shapes\CircleShape.hpp">
       <Filter>Graphics\Shapes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Graphics\Shapes\EllipseShape.hpp">
+    <ClInclude Include="..\include\Graphics\Shapes\EllipseShape.hpp">
       <Filter>Graphics\Shapes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Graphics\Shapes\RectangleShape.hpp">
+    <ClInclude Include="..\include\Graphics\Shapes\RectangleShape.hpp">
       <Filter>Graphics\Shapes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Graphics\Shapes\Shape.hpp">
+    <ClInclude Include="..\include\Graphics\Shapes\Shape.hpp">
       <Filter>Graphics\Shapes</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Graphics\Graphics.hpp">
+    <ClInclude Include="..\include\Graphics\Graphics.hpp">
       <Filter>Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Include\System\Clock.hpp">
+    <ClInclude Include="..\include\Export\Export.hpp">
+      <Filter>Export</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Link.hpp">
+      <Filter>Link Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Window\Window.hpp">
       <Filter>System</Filter>
     </ClInclude>
-    <ClInclude Include="Include\Window\Window.hpp">
+    <ClInclude Include="..\include\System\Clock.hpp">
       <Filter>Window</Filter>
     </ClInclude>
   </ItemGroup>
@@ -74,22 +74,22 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Include\Graphics\Shapes\CircleShape.cpp">
+    <ClCompile Include="..\include\Graphics\Shapes\CircleShape.cpp">
       <Filter>Graphics\Shapes</Filter>
     </ClCompile>
-    <ClCompile Include="Include\Graphics\Shapes\EllipseShape.cpp">
+    <ClCompile Include="..\include\Graphics\Shapes\EllipseShape.cpp">
       <Filter>Graphics\Shapes</Filter>
     </ClCompile>
-    <ClCompile Include="Include\Graphics\Shapes\RectangleShape.cpp">
+    <ClCompile Include="..\include\Graphics\Shapes\RectangleShape.cpp">
       <Filter>Graphics\Shapes</Filter>
     </ClCompile>
-    <ClCompile Include="Include\Graphics\Graphics.cpp">
+    <ClCompile Include="..\include\Graphics\Graphics.cpp">
       <Filter>Graphics</Filter>
     </ClCompile>
-    <ClCompile Include="Include\System\Clock.cpp">
+    <ClCompile Include="..\include\Window\Window.cpp">
       <Filter>System</Filter>
     </ClCompile>
-    <ClCompile Include="Include\Window\Window.cpp">
+    <ClCompile Include="..\include\System\Clock.cpp">
       <Filter>Window</Filter>
     </ClCompile>
   </ItemGroup>
